--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
+    /*"grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5",
+    "grunt": "~0.4.5",*/
     "phantomjs-prebuilt": "^2.1.7",
     "img-diff-js": "^0.4.0",
     "wait-for-stuff": "^1.3.0"
